Messages: fixed a minor styling issue on firefox (new participant button)

--- a/client/Social/Activity/styl/activity.styl
+++ b/client/Social/Activity/styl/activity.styl
@@ -2050,11 +2050,12 @@ timeColor2 = #5F9E5E
       rounded             50%
       background          transparent
       padding             0
+      text-align          center
+      line-height         28px
       fl()
 
       .icon
-        margin            0 0 0 9px
-        display           block
+        display           inline-block
         r-sprite          'activity', 'new-participant-plus'
         -webkit-transition -webkit-transform .2s ease
         -moz-transition    -moz-transform .2s ease
